tests/lean/classBadOutParam.lean.expected.out
classBadOutParam.lean:3:1-3:4: error: invalid class, parameter #2 depends on `OutParam`, but it is not an `OutParam`
